# llm_evaluation

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  get_predictions.py  instructions.md  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt  test_ollama.py
.github/workflows/: ci..yml
cache/02d8f05c58bf17f66fb41f73854f2e3d1948e303bc2a9367347de86f91a294a6/: mistral.pkl
cache/063e60d1dab7ebb8608e1e2ca72dc185d14ecd8ee93b25c29800ff7781becbbd/: mistral.pkl
cache/0ef96afd3ebb16d49ec74f0b21bc5deaee777227a140fffb155b078612c54641/: llama3.pkl  mistral.pkl
cache/0ffaeb4182bf365372ddc00e5b1f53203ce2df2ce012f0415382db72a99556ae/: gemma2.pkl  mistral.pkl
cache/10ae5ec87631c8575dc66f187f2f8c637ed3d663231b5c77c284b0f354be982f/: mistral.pkl
cache/13234676d7ef5921e93cef5fe5e4d1b252cf6161131c404ef6563cb1c74dc106/: mistral.pkl
cache/1646a3f4f03c7ea2a5470fb2687f8f265525825b467990ad124f0c51d27e1618/: mistral.pkl
cache/1b7c059889f8b62046b7b8c80bb1b8f28be29e44f91cf39284184d7aa9ebfb00/: mistral.pkl
config/: default.yaml
configs/: config.yaml
data/: dataset.csv
notebooks/: Analysis.ipynb  Prompt Analysis.ipynb  experimenting.ipynb  vector8-model-training.ipynb
src/api/: main.py
tests/: conftest.py  test_api.py  test_atomic_function.py  test_cache.py  test_dataset.py  test_judge.py  test_logging.py  test_multi_model_runner.py  test_ollama_client.py  test_prompt_optimizer.py  test_prompt_utils.py  test_request_context.py  test_smoke.py  test_task_manager.py  test_versioning.py
(+98 files in other folders)
